Fix spotbug errors.